jEdit 5.2 version history
       (changes since jEdit 5.1pre1)
:encoding=UTF-8:

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova and Alan Ezust for
 contributing to this release.

{{{ Bug Fixes

 - The column title are missing in shortcuts option pane
   (#3614404 Matthieu Casanova)

 - JavaDoc stylesheet customized so it is readable in helpviewer
   (#3614229 - Alan Ezust)
   
 - Reload optionally dependent plugins when a plugin is unloaded.
   (#3614456 - Dale Anson)
   
 - Plugin dependencies are shown in the plugin manager details pane for all three 
   tabs. (#3614465 - Dale Anson)
   
}}}
{{{ Miscellaneous

 - Added a new column "ActionSet" in Shortcuts option pane to know
   to which actionSet an action belong (feature #3614386 Matthieu Casanova)

 - Increased the scrolling speed in option pane (Matthieu Casanova)

}}}

{{{ API Changes

  - jEdit now depends on Java 1.7

  - Removed deprecated (ambiguous) overloads of IOUtilities.closeQuietly().

}}}
{{{ Editing

  - Patch to toggle word completion of words with digits.
    (#3614607, Patrick Eibl)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: